# FusterCluck

./: .gitattributes  .gitignore  Plan.md  README.md  debug_training.py  pyproject.toml
artifacts/checkpoints/text-stage/: step-0000000.json  step-0000005.json  step-0000021.json  step-0000021.pt
artifacts/tokenizer/: fustercluck.model  fustercluck.vocab
configs/: cloud_training.yaml  stage0.yaml  stage0_sources.json  text_pipeline.yaml
data/processed/code/: 02d
data/processed/general/: engineering_and_science_chunk512.txt  ethics_treatise_chunk512.txt  logic_manual_chunk512.txt  philosophical_essays_chunk512.txt  scientific_american_1896_chunk512.txt  tiny_shakespeare_chunk512.txt
data/processed/math/: algebra_for_beginners_chunk512.txt  algebraic_geometry_chunk512.txt  analytic_geometry_chunk512.txt  calculus_course_chunk512.txt  combinatorics_chunk512.txt  complex_analysis_chunk512.txt  (+16 more)
data/sft_reasoning/: generation_stats.json  reasoning_training.jsonl
docs/: cloud_training_guide.md  cloud_training_quickstart.md  domain_specialization.md  hardware_playbook.md  runpod_config_template.md  runpod_guide.md  stage0_run_log.md  storage_budget.md
results/: complete_eval.json  test_eval.json
scripts/: build_stage0_corpus.py  build_storage_aware_corpus.py  build_tokenizer.py  chunk_text_domains.py  deduplicate_corpus.py  download_data.py  download_hf_corpus.py  download_hf_corpus_expanded.py  download_hf_corpus_massive.py  download_real_datasets.py  download_working_datasets.py  evaluate_model.py  fast_tokenize.py  generate_reasoning_data.py  generate_synth_ocr.py  manual_data_setup.py  monitor_performance.py  monitor_training.py  package_training_bundle.py  pretokenize_text.py  process_cloud_data.py  process_weighted_data.py  quick_start_cloud.sh  run_cloud_training.py  run_stage0.py  run_text_pipeline.py  runpod_quickstart.sh  runpod_setup.sh  scale_to_actual_2b.py  scale_up_data.py  setup_cloud_instance.sh  simple_scale_up.py  smart_data_download.py  track_costs.py  verify_training_setup.py
src/fustercluck/: __init__.py
tests/: minimal_training_test.py  test_model.py
(+103 files in other folders)
